--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude:
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
   
-title: Health Data Lab
+title: Digital Technology Innovation Lab
 description: "Contact: larsab@cs.uit.no"
 logo: UiT_Logo_Eng_2l_Bla_RGB.png
 
