--- a/_config.yml
+++ b/_config.yml
@@ -16,5 +16,6 @@ exclude:
 title: Digital Technology Innovation Lab
 description: "Contact: lars.ailo.bongo@uit.no or dominic.riley@uit.no"
 logo: UiT_Logo_Eng_2l_Bla_RGB.png
+logo: VI_main_960px-p-500.png
 
 theme: jekyll-theme-minimal
