--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ exclude:
   - PULL_REQUEST_TEMPLATE.md
   
 title: Digital Technology Innovation Lab
-description: "Contact: benjamin.ricaud@uit.no and lars.ailo.bongo@uit.no"
+description: "Contact: anna.dranovska@uit.no, benjamin.ricaud@uit.no and lars.ailo.bongo@uit.no"
 logo: UiT_Logo_Eng_2l_Bla_RGB.png
 
 theme: jekyll-theme-minimal
